# vdftrack1results

./: entry_results.txt  judge.py
akashnil/: entry.txt
anonymous1/: entry.txt
anonymous2/: entry.txt
bulaiden/: entry.txt
cryptoslava/: entry.txt
poanetwork/: entry.txt
psa/: entry.txt
psa/entry/: CMakeLists.txt  LICENSE  NOTICE  README.md  install.sh  main.cpp
psa/entry/gmp-source/: Makefile  config.h  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  libgmp.la  libgmpxx.la  libtool
psa/entry/gmp-source/.libs/: libgmp.lai  libgmp.so.10.3.2  libgmpxx.lai  libgmpxx.so.4.5.2
psa/entry/gmp-source/cxx/: Makefile
psa/entry/gmp-source/demos/: Makefile
psa/entry/gmp-source/demos/calc/: Makefile
psa/entry/gmp-source/demos/expr/: Makefile
psa/entry/gmp-source/doc/: Makefile
psa/entry/gmp-source/mpf/: Makefile
psa/entry/gmp-source/mpn/: Makefile
psa/entry/gmp-source/mpq/: Makefile
psa/entry/gmp-source/mpz/: Makefile  mul.c
psa/entry/gmp-source/printf/: Makefile
psa/entry/gmp-source/rand/: Makefile
psa/entry/gmp-source/scanf/: Makefile
psa/entry/gmp-source/tests/: Makefile
psa/entry/gmp-source/tests/cxx/: Makefile
psa/entry/gmp-source/tests/devel/: Makefile
psa/entry/gmp-source/tests/misc/: Makefile
psa/entry/gmp-source/tests/mpf/: Makefile
psa/entry/gmp-source/tests/mpn/: Makefile
psa/entry/gmp-source/tests/mpq/: Makefile
psa/entry/gmp-source/tests/mpz/: Makefile
psa/entry/gmp-source/tests/rand/: Makefile
psa/entry/gmp-source/tune/: Makefile
pulledpork/: entry.txt
pulmark/: entry.txt
(+3311 files in other folders)
